# os

./: .gitignore  CMakeLists.txt  LICENSE  Toolchain.cmake
kernel/: CMakeLists.txt  kernel.c  linker.ld
kernel/arch/x86/: boot.asm  idt.c
kernel/arch/x86_64/: boot.asm  idt.c
kernel/drivers/: io.c  keyboard.c  timer.c  vga.c
kernel/fs/: disk.c  fat12.c
kernel/include/: fat12.h  io.h  keyboard.h  paging.h  pmm.h  scheduler.h  string.h  timer.h  vga.h
kernel/lib/: string.c
kernel/mm/: paging.c  pmm.c
kernel/proc/: scheduler.c
libc/: CMakeLists.txt  stdbool.h  stddef.h  stdint.h  stdio.cpp  stdio.h
stosinit/: CMakeLists.txt  main.c
